# weather-dashboard

./: .gitignore  app.py  helloworld.py  pyproject.toml  requirements.txt  weather_dashboard.py
static/: style.css
templates/: page.html
waveshare_epd/: epd7in3f.py
