[project]
name = "weather-display"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gpiozero>=2.0.1",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rpi-gpio>=0.7.1",
    "spidev>=3.8",
    "waveshare-epaper>=1.3.0",
]
